--- a/AppPedido/app/src/main/AndroidManifest.xml
+++ b/AppPedido/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.unip.apppedido">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".application.AppPedidoApplication"
         android:allowBackup="true"
@@ -10,10 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
-            android:name=".activities.MainActivity"
-            android:label="@string/main_activity_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".activities.LoginActivity"
+            android:label="@string/app_name">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,19 +25,21 @@
         </activity>
 
         <activity
+            android:name=".activities.MainActivity"
+            android:label="@string/main_activity_name"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
             android:name=".activities.CategoryActivity"
             android:label="@string/category_activity_name"
-            android:parentActivityName=".activities.MainActivity"/>
-
+            android:parentActivityName=".activities.MainActivity" />
         <activity
             android:name=".activities.ProductActivity"
             android:label="@string/product_activity_name"
-            android:parentActivityName=".activities.CategoryActivity"/>
-
-        <activity android:name=".activities.ShoppingCartActivity"
+            android:parentActivityName=".activities.CategoryActivity" />
+        <activity
+            android:name=".activities.ShoppingCartActivity"
             android:label="@string/shopping_cart_activity_name"
-            android:parentActivityName=".activities.ProductActivity"/>
-
+            android:parentActivityName=".activities.ProductActivity" />
         <activity
             android:name=".activities.AboutActivity"
             android:theme="@style/AppThemeAbout" />
