--- a/AppPedido/app/src/main/AndroidManifest.xml
+++ b/AppPedido/app/src/main/AndroidManifest.xml
@@ -12,22 +12,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".activities.LoginActivity"
             android:label="@string/app_name">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/main_activity_name"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.CategoryActivity"
             android:label="@string/category_activity_name"
@@ -43,6 +40,7 @@
         <activity
             android:name=".activities.AboutActivity"
             android:theme="@style/AppThemeAbout" />
+        <activity android:name=".activities.RegisterActivity"></activity>
     </application>
 
 </manifest>
